--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -7,5 +7,6 @@
     font-size: 13px;
     text-align: center;
     line-height: 0;
-    font-family: Courier, monospace;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: Courier, monospace; */
 }
